[gd_scene load_steps=12 format=3 uid="uid://cev3wbl4o1nxq"]

[ext_resource type="Script" path="res://Assets/Scripts/optionsmenu.gd" id="1_eaafn"]
[ext_resource type="Texture2D" uid="uid://clf7srvjetr64" path="res://Assets/Backgrounds/looby/7.png" id="2_lxw2t"]
[ext_resource type="FontFile" uid="uid://c7x58lu1meebs" path="res://Assets/fonts/Kenney Pixel.ttf" id="3_o1wqp"]
[ext_resource type="AudioStream" uid="uid://c14nf0ceuroum" path="res://Assets/resources/soundBg.mp3" id="4_la3tw"]
[ext_resource type="FontFile" uid="uid://qg4eo7ybdnhr" path="res://Assets/fonts/Kenney Mini.ttf" id="5_cdkyf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_acyah"]
bg_color = Color(0.530477, 0.696568, 0.998415, 1)
border_width_bottom = 3
border_color = Color(0, 0.65098, 0.862745, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hpuaq"]
border_width_bottom = 3
border_color = Color(0, 0.65098, 0.862745, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v5lrm"]
bg_color = Color(0.529412, 0.698039, 1, 1)
border_width_bottom = 3
border_color = Color(0, 0.65098, 0.862745, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_paay4"]
bg_color = Color(0.529412, 0.698039, 1, 1)
border_width_bottom = 3
border_color = Color(0, 0.65098, 0.862745, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7sxir"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_66h8s"]
bg_color = Color(0.47451, 0.647059, 0.913725, 0.694118)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[node name="Optionsmenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_eaafn")

[node name="background" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 0
offset_right = 1045.0
offset_bottom = 588.0
texture = ExtResource("2_lxw2t")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -136.0
offset_right = 309.0
offset_bottom = 137.0
grow_vertical = 2

[node name="info" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_o1wqp")
theme_override_font_sizes/font_size = 60
theme_override_styles/focus = SubResource("StyleBoxFlat_acyah")
theme_override_styles/hover = SubResource("StyleBoxFlat_hpuaq")
text = "INFO"

[node name="volumen" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_o1wqp")
theme_override_font_sizes/font_size = 60
theme_override_styles/focus = SubResource("StyleBoxFlat_v5lrm")
theme_override_styles/hover = SubResource("StyleBoxFlat_hpuaq")
text = "VOLUMEN"

[node name="back" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_o1wqp")
theme_override_font_sizes/font_size = 60
theme_override_styles/focus = SubResource("StyleBoxFlat_paay4")
theme_override_styles/hover = SubResource("StyleBoxFlat_hpuaq")
text = "BACK
"

[node name="muteButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_o1wqp")
theme_override_font_sizes/font_size = 60
theme_override_styles/focus = SubResource("StyleBoxFlat_paay4")
theme_override_styles/hover = SubResource("StyleBoxFlat_hpuaq")
text = "AJUSTAR VOL"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_la3tw")

[node name="HSlider" type="HSlider" parent="."]
layout_mode = 0
offset_left = 72.0
offset_top = 16.0
offset_right = 80.0
offset_bottom = 32.0
theme_override_styles/slider = SubResource("StyleBoxFlat_7sxir")

[node name="infoLabel" type="Label" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 315.0
offset_top = 65.0
offset_right = 443.0
offset_bottom = 90.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_cdkyf")
theme_override_font_sizes/font_size = 17
theme_override_styles/normal = SubResource("StyleBoxFlat_66h8s")

[connection signal="pressed" from="VBoxContainer/info" to="." method="_on_info_pressed"]
[connection signal="pressed" from="VBoxContainer/volumen" to="." method="_on_volumen_pressed"]
[connection signal="pressed" from="VBoxContainer/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="VBoxContainer/muteButton" to="." method="_on_mute_button_pressed"]
